Express values for HTTPS/TLS from pillar to server.conf

--- a/graylog/files/server.conf
+++ b/graylog/files/server.conf
@@ -164,16 +164,21 @@ http_thread_pool_size = {{ config.graylog.http.thread_pool_size }}
 # This secures the communication with the HTTP interface with TLS to prevent request forgery and eavesdropping.
 #
 # Default: false
-#http_enable_tls = {{ config.graylog.http.enable_tls }}
+#http_enable_tls
+{{ "http_enable_tls = " ~ config.graylog.http.enable_tls if config.graylog.http.enable_tls|default(None) is not None}}
 
 # The X.509 certificate chain file in PEM format to use for securing the HTTP interface.
-#http_tls_cert_file = {{ config.graylog.http.tls_cert_file }}
+#http_tls_cert_file
+{{ "http_tls_cert_file = " ~ config.graylog.http.tls_cert_file if config.graylog.http.tls_cert_file|default(None) is not None }}
 
 # The PKCS#8 private key file in PEM format to use for securing the HTTP interface.
-#http_tls_key_file = {{ config.graylog.http.tls_key_file }}
+#http_tls_key_file
+{{ "http_tls_key_file = " ~ config.graylog.http.tls_key_file if config.graylog.http.tls_key_file|default(None) is not None }}
 
 # The password to unlock the private key used for securing the HTTP interface.
 #http_tls_key_password = {{ config.graylog.http.tls_key_password }}
+{{ "http_tls_key_password = " ~ config.graylog.http.tls_key_password if config.graylog.http.tls_key_password|default(None) is not None }}
+
 
 # Comma separated list of trusted proxies that are allowed to set the client address with X-Forwarded-For
 # header. May be subnets, or hosts.
