--- a/graylog/files/server.conf
+++ b/graylog/files/server.conf
@@ -169,15 +169,15 @@ http_thread_pool_size = {{ config.graylog.http.thread_pool_size }}
 
 # The X.509 certificate chain file in PEM format to use for securing the HTTP interface.
 #http_tls_cert_file
-{{ "http_tls_cert_file = " ~ config.graylog.http.tls_cert_file if config.graylog.http.tls_cert_file|default(None) is not none }}
+{{ "http_tls_cert_file = " ~ config.graylog.http.tls_cert_file if config.graylog.http.tls_cert_file|default(None) is not none else "" }}
 
 # The PKCS#8 private key file in PEM format to use for securing the HTTP interface.
 #http_tls_key_file
-{{ "http_tls_key_file = " ~ config.graylog.http.tls_key_file if config.graylog.http.tls_key_file|default(None) is not none }}
+{{ "http_tls_key_file = " ~ config.graylog.http.tls_key_file if config.graylog.http.tls_key_file|default(None) is not none else "" }}
 
 # The password to unlock the private key used for securing the HTTP interface.
-#http_tls_key_password = {{ config.graylog.http.tls_key_password }}
-{{ "http_tls_key_password = " ~ config.graylog.http.tls_key_password if config.graylog.http.tls_key_password|default(None) is not none }}
+#http_tls_key_password
+{{ "http_tls_key_password = " ~ config.graylog.http.tls_key_password if config.graylog.http.tls_key_password|default(None, True) is not none else "" }}
 
 
 # Comma separated list of trusted proxies that are allowed to set the client address with X-Forwarded-For
