(sqh) graylog conf vars use defaults or are absent if unused

--- a/graylog/files/server.conf
+++ b/graylog/files/server.conf
@@ -102,9 +102,11 @@ plugin_dir = {{ config.graylog.plugin_dir }}
 # If the port is omitted, Graylog will use port 9000 by default.
 #
 # Default: 127.0.0.1:9000
+# Name: http_bind_address
 #http_bind_address = 127.0.0.1:9000
 #http_bind_address = [2001:db8::1]:9000
-http_bind_address = {{ config.graylog.http.bind_address }}
+{{ "http_bind_address = " ~ config.graylog.http.bind_address|default("127.0.0.1", True) }}
+
 
 #### HTTP publish URI
 #
@@ -120,7 +122,9 @@ http_bind_address = {{ config.graylog.http.bind_address }}
 # This configuration setting *must not* contain a wildcard address!
 #
 # Default: http://$http_bind_address/
-#http_publish_uri = {{ config.graylog.http.publish_uri }}
+# Name: http_publish_uri
+#http_publish_uri = http://graylog.example.com
+{{ "http_publish_uri = " ~ config.graylog.http.publish_uri if config.graylog.http.publish_uri|default(None, True) is not none else "" }}
 
 #### External Graylog URI
 #
@@ -134,14 +138,16 @@ http_bind_address = {{ config.graylog.http.bind_address }}
 # This setting can be overriden on a per-request basis with the "X-Graylog-Server-URL" HTTP request header.
 #
 # Default: $http_publish_uri
-#http_external_uri = {{ config.graylog.http.external_uri }}
+# Name: http_external_uri
+# http_external_uri = {{ config.graylog.http.external_uri }}
+{{ "http_external_uri = " ~ config.graylog.http.external_uri if config.graylog.http.external_uri|default(None, True) is not none else "" }}
 
 #### Enable CORS headers for HTTP interface
 #
 # This is necessary for JS-clients accessing the server directly.
 # If these are disabled, modern browsers will not be able to retrieve resources from the server.
 # This is enabled by default. Uncomment the next line to disable it.
-http_enable_cors = {{ config.graylog.http.enable_cors }}
+{{ "http_enable_cors = " ~ config.graylog.http.enable_cors if config.graylog.http.enable_cors|default(None, True) is not none else "" }}
 
 #### Enable GZIP support for HTTP interface
 #
@@ -165,7 +171,7 @@ http_thread_pool_size = {{ config.graylog.http.thread_pool_size }}
 #
 # Default: false
 #http_enable_tls
-{{ "http_enable_tls = " ~ config.graylog.http.enable_tls if config.graylog.http.enable_tls|default(None) is not none}}
+{{ "http_enable_tls = " ~ config.graylog.http.enable_tls if config.graylog.http.enable_tls|default(None) is not none else ""}}
 
 # The X.509 certificate chain file in PEM format to use for securing the HTTP interface.
 #http_tls_cert_file
@@ -182,8 +188,9 @@ http_thread_pool_size = {{ config.graylog.http.thread_pool_size }}
 
 # Comma separated list of trusted proxies that are allowed to set the client address with X-Forwarded-For
 # header. May be subnets, or hosts.
+# Name: trusted_proxies
 #trusted_proxies = 127.0.0.1/32, 0:0:0:0:0:0:0:1/128
-trusted_proxies = {{ config.graylog.trusted_proxies }}
+{{ "trusted_proxies = " ~ config.graylog.trusted_proxies if config.graylog.trusted_proxies|default(None, True) is not none else "" }}
 
 # List of Elasticsearch hosts Graylog should connect to.
 # Need to be specified as a comma-separated list of valid URIs for the http ports of your elasticsearch nodes.
